# emergingtimes-lab

./: .gitignore  README.md  clean_merge_companies_list.ipynb  populate_companies_data.ipynb  pyproject.toml
data/companies_lists/: Microsite_original.csv  NFX-Microsite-manual-merge.csv  NFXs Generative Tech Open Source Market Map - ALL.csv  combined.csv  companies.csv  duplicates.csv
