[tool.poetry]
name = "emergingtimes-studio"
version = "0.1.0"
description = ""
authors = ["Sofiane Bebert <s.bebert@diceytech.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
python-ffmpeg = "^2.0.10"
black = "^23.12.1"
requests = "^2.31.0"
replicate = "^0.23.0"
python-dotenv = "^1.0.1"
anthropic = "^0.11.0"
openai = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
